Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-30774

output linkify not working when the output is colored

XMLWordPrintable

    • Linux/X11
    • bb2d565ec (master)

      Hello,

      The custom output parser does not linkify file paths if there is an escape character before.

      In my example i use the "\033[31m" code wich allows to color the following text in red.

       

      Minimal reproducing example :

      main.cpp :

      #include <iostream>
      int main()
      {
          std::cout << "#error file://main.cpp:5: error message" << std::endl;
          std::cout << "\033[31m#error\033[0m file://main.cpp:5: error message" << std::endl;
          return 0;
      }

      What happens :

      In the Application Output Panel, the first line is properly linkified, but the second line is properly colored, but not linkified. (see attached screenshot)

      What should happen :

      The second line should be both colored and linkified.

       

      Possible improvements :

      • add support to hyperlink escape sequence
      • add support to customize linkifiable paths with a regexp in custom output parsers

        1. output_capture.png
          5 kB
          Anselme François
        For Gerrit Dashboard: QTCREATORBUG-30774
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            anselme Anselme François
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes