Utils: Fix output linkification

The case where links are combined with other formatting was not correctly
implemented.

Fixes: QTCREATORBUG-30774
Change-Id: Ie56a7f4c9a1f8a9b23848cc6fd4b7749bb6cecd7
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>